<resources>
    <string name="app_name">SmartHouse2236</string>
    <string name="logotext">Нажмите для Продолжения</string>
    <string name="logo1">imyge</string>
    <string name="logotext2">Smart House</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="button1">Enter Your House</string>
    <string name="button2">New Resident</string>
    <string name="buttonimage1">New Resident</string>
    <string name="text">Your Home</string>
    <string name="buttonimage2">New Resident</string>
    <string name="text2">2715 s.Pavlovsk,str,Texnikymovskaya 2</string>
    <string name="buttonimage3">New Resident</string>
    <string name="buttonimage4">New Resident</string>
    <string name="buttonimage5">New Resident</string>
    <string name="buttonimage6">New Resident</string>
    <string name="text3">Profile</string>
    <string name="text4">SAVE</string>
    <string name="name1">Lonnie Murphy</string>
    <string name="name2">lonnie.murphy@gmail.com</string>
    <string name="name3">(264)-748-9228</string>
    <string name="name4">Female</string>
    <string name="name5">10/4/1976</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Grnder">Gender</string>
    <string name="Date">Date Of Birth</string>
    <string name="sign">Sign Out</string>
    <string name="Rooms">ROOMS</string>
    <string name="addroom">Add Room</string>
    <string name="save">SAVE</string>
    <string name="buttonimage7">SAVE</string>
    <string name="Enter">Enter Rooms name</string>
    <string name="Search"> </string>
    <string name="buttonimage8">New Resident</string>
    <string name="Statics">Statics</string>
    <string name="one">Statics</string>
</resources>