<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".youhome">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="451dp"
        android:layout_height="240dp"
        android:layout_marginBottom="516dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle_10" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="413dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/status_home" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/one"
        android:onClick="perehod14"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/frame_38" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="35dp"
        android:layout_height="16dp"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/statics" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/frame_39" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="43dp"
        android:layout_height="18dp"
        android:layout_marginStart="73dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/routines" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/buttonimage5"
        android:onClick="perehod7"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/frame_42" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="41dp"
        android:layout_height="15dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/setting" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="123dp"
        android:layout_height="22dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/icon_location" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:contentDescription="@string/buttonimage3"
        android:onClick="perehod6"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/frame_37red" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="35dp"
        android:layout_height="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:srcCompat="@drawable/homered" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text2"
        android:textColor="@color/seriy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/buttonimage8"
        android:onClick="perehod8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/frame_23" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/Rooms"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="77dp"
        android:layout_height="11dp"
        android:layout_marginTop="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_11" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="276dp"
        android:layout_height="300dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/frame_7" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="276dp"
        android:layout_height="300dp"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/frame_7" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="276dp"
        android:layout_height="300dp"
        android:layout_marginEnd="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604"
        app:srcCompat="@drawable/frame_7" />


</androidx.constraintlayout.widget.ConstraintLayout>